Solve dropdown width is not proper

--- a/app/styles/addNotification.css
+++ b/app/styles/addNotification.css
@@ -117,6 +117,7 @@
   transform-origin: top center;
   will-change: transform, opacity;
   backface-visibility: hidden;
+  box-sizing: border-box;
 }
 
 .notification-select-options.open {
