--- a/app/styles/addNotification.css
+++ b/app/styles/addNotification.css
@@ -110,6 +110,8 @@
     0 0 0 1px rgba(255, 255, 255, 0.1) inset;
   max-height: 250px;
   overflow-y: auto;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
   z-index: 99999;
   display: flex;
   flex-direction: column;
@@ -118,6 +120,16 @@
   will-change: transform, opacity;
   backface-visibility: hidden;
   box-sizing: border-box;
+}
+
+.notification-select-options::-webkit-scrollbar {
+  display: none; /* Chrome, Safari and Opera */
+}
+
+.notification-select-options::-webkit-scrollbar-track,
+.notification-select-options::-webkit-scrollbar-thumb,
+.notification-select-options::-webkit-scrollbar-thumb:hover {
+  display: none;
 }
 
 .notification-select-options.open {
@@ -159,23 +171,6 @@
 .notification-select-option.selected {
   background-color: rgb(35, 35, 35);
   color: var(--theme-color);
-}
-
-.notification-select-options::-webkit-scrollbar {
-  width: 8px;
-}
-
-.notification-select-options::-webkit-scrollbar-track {
-  background-color: rgb(15, 15, 15);
-}
-
-.notification-select-options::-webkit-scrollbar-thumb {
-  background-color: rgb(35, 35, 35);
-  border-radius: 4px;
-}
-
-.notification-select-options::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(45, 45, 45);
 }
 
 .notification-select-option svg {
