--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,14 @@
   -webkit-user-select: none;
   user-select: none;
 }
+
+/* Enable text selection for form inputs */
+input, textarea, [contenteditable="true"] {
+  -webkit-touch-callout: default;
+  -webkit-user-select: text;
+  user-select: text;
+}
+
 body {
   background-color: var(--background);
   color: var(--color);
